--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.8",
     "vite": "^5.3.1"
   }
 }
